delete unused files

--- a/dm3xx_sd.config
+++ b/dm3xx_sd.config
@@ -9,8 +9,8 @@ a=${board:=leopard_new} # default board (leopard/leopard_new/evm)
 case ${platform}_${board} in
 
 DM36x_leopard_new)
-	ubl=files/common/UBL_DM36x_NAND.bin
-	uboot=files/leopard_new/bootloader.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
+	ubl=files/leopard_new/ubl_nand.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
+	uboot=files/leopard_new/bootloader.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
 	kernel=files/leopard_new/uImage
 	rootfs=files/common/ramdisk.gz
 	;;
