add flash script

--- a/dm3xx_sd.config
+++ b/dm3xx_sd.config
@@ -10,8 +10,7 @@ case ${platform}_${board} in
 
 DM36x_leopard_new)
 	ubl=files/leopard_new/ubl_nand.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
-	uboot=files/leopard_new/bootloader.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
-	#uboot=files/leopard_new/bootloader.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
+	uboot=files/leopard_new/bootloader.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
 	kernel=files/leopard_new/uImage
 	rootfs=files/common/ramdisk.gz
 	;;
