--- a/dm3xx_sd.config
+++ b/dm3xx_sd.config
@@ -10,8 +10,16 @@ case ${platform}_${board} in
 
 DM36x_leopard_new)
 	ubl=files/leopard_new/ubl_nand.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
-	uboot=files/leopard_new/bootloader.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
-	kernel=files/leopard_new/uImage
+	#uboot=files/leopard_new/bootloader.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
+	uboot=../buildroot/output/images/u-boot.nand.bin
+	#kernel=../buildroot/output/images/uImage
+	#kernel=../linux-davinci/arch/arm/boot/uImage
+	kernel=../buildroot/output/images/uImage
+#	rootfs=../buildroot/output/images/rootfs.ubi
+
+#	ubl=files/leopard_new/ubl_nand.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
+
+#	kernel=files/leopard_new/uImage
 	rootfs=files/leopard_new/rootfs.ubi
 	;;
 
