add working u-boot

--- a/dm3xx_sd.config
+++ b/dm3xx_sd.config
@@ -11,7 +11,8 @@ case ${platform}_${board} in
 DM36x_leopard_new)
 	ubl=files/leopard_new/ubl_nand.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
 	#uboot=files/leopard_new/bootloader.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
-	uboot=../buildroot/output/images/u-boot.nand.bin
+	uboot=files/leopard_new/u-boot.bin.nandbin
+	#uboot=../buildroot/output/images/u-boot.nand.bin
 	#kernel=../buildroot/output/images/uImage
 	#kernel=../linux-davinci/arch/arm/boot/uImage
 	kernel=../buildroot/output/images/uImage
