working config and kernel

--- a/dm3xx_sd.config
+++ b/dm3xx_sd.config
@@ -16,12 +16,12 @@ DM36x_leopard_new)
 	#kernel=../buildroot/output/images/uImage
 	#kernel=../linux-davinci/arch/arm/boot/uImage
 	kernel=../buildroot/output/images/uImage
-#	rootfs=../buildroot/output/images/rootfs.ubi
+	rootfs=../buildroot/output/images/rootfs.ubi
 
 #	ubl=files/leopard_new/ubl_nand.nandbin.klaus.LeopardBoardDM365sdkEVAL2011Q2.leopard
 
 #	kernel=files/leopard_new/uImage
-	rootfs=files/leopard_new/rootfs.ubi
+#	rootfs=files/leopard_new/rootfs.ubi
 	;;
 
 DM36x_leopard)
